# rust-actix-test

./: .gitmodules  Cargo.toml
src/: main.rs  socket.rs
static/: 404.html  index.html
static/src/: js.js
