[package]
name = "rust-actix-test"
version = "0.1.0"
authors = ["Douile <25043847+Douile@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-files = "0.4"
actix-web-actors = "3"
futures = "0.3"
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.8"
